tests/sksl/errors/LayoutInStruct.asm.frag
### Compilation failed:

error: 2: layout qualifier 'binding' is not permitted on a struct field
error: 3: layout qualifier 'set' is not permitted on a struct field
2 errors
